# unsupervised_learning_dino

./: .gitignore  IMAGE_SIZES.md  README.md  Taskfile.yaml  check_s3.py  export_exp.py  pipeline.py  prodlike_comparison.py  pyproject.toml  repl.py  repl_dino.py  repl_viz.py  taskfile.activity.yaml  test_download_one.py
input_site_data/EM2020_Jimblebar_Rail/: dataset.json  site_config.json  study_area.fgb
input_site_data/manned_bens_oasis_wet/: dataset.json  site_config.json  study_area_1.fgb  study_area_2.fgb
input_site_data/monrovia/: dataset.json  site_config.json  study_area.fgb  unet_config.json
scripts/: export_exp.py
src/evaluation/: __init__.py  segmentation_compare.py  separability.py
src/train/: align.py  data.py  dino.py  tracking.py  trainer.py
src/visualisation/: classification.py  common.py  features.py  posttraining.py  pretraining.py
